--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Pranjal Kumar Patel</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="https://www.linkedin.com/in/pranjalpatel83/">Hire me</a>
             </div>
         </div>
     </section>
